[package]
name = "rloxum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlox = { path = "../rlox" }
codespan-reporting = "0.11.1"
color-eyre = "0.5.11"
lasso = "0.6.0"
num_enum = "0.5.4"
fnv = "1.0.7"
